.menu-items z-index issue

--- a/resources/css/dagviz.css
+++ b/resources/css/dagviz.css
@@ -165,7 +165,7 @@ body{
 .tooltip .text{display:block;margin:2px 4px 2px 4px;}
 
 #menu-bar,#top{pointer-events:none;}
-#menu-bar .menu-item{pointer-events:initial;}
+#menu-bar .menu-item, .menu-items{pointer-events:initial;}
 
 #menu-bar,
 .menu-items{
